--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram Reel Downloader</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Instagram Downloader</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>Develop by Shivam Nayak</h1>
-        </div>
-        <p>Download your favorite Instagram reels easily!</p>
-        <input type="text" id="reelUrl" placeholder="Paste Instagram reel URL here...">
-        <button onclick="downloadReel()">Download Reel</button>
+  <div class="container">
+    <h1>Develop by Shivam</h1>
+    <p>Download your favorite Instagram videos, reels, and stories easily!</p>
+
+    <div class="input-section">
+      <input type="text" id="urlInput" placeholder="Paste Instagram URL here" />
+      <button id="downloadButton">Download</button>
     </div>
-    <script src="script.js"></script>
+
+    <div class="output-section" id="output">
+      <p>Enter a valid Instagram URL to preview and download.</p>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
